--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 
 
-<main id="container" class="relative">
+<main id="container">
   <router-outlet></router-outlet>
 </main>
 
