--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,8 @@
         <a class="nav-link" [routerLink]="['/countries']" routerLinkActive="active">Countries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">
-          Careers
+        <a class="nav-link" [routerLink]="['/tracker']" routerLinkActive="active">
+          Tracker
         </a>
       </li>
       <li class="nav-item">
