--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
-.icon-green {
-  color: darkgreen;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.relative {
-  position: relative;
-}
-
 main {
-  display: block;
+  margin: 1em 1em;
 }
